# matf-rg-project-2024

./: .gitattributes  .gitignore  CMakeLists.txt  PROJECT-DESCRIPTION-TEMPLATE.md  README.md  build.sh  check.py  format.py  imgui.ini  setup.sh
app/: CMakeLists.txt  MyApp.cpp  MyApp.hpp  config.json  imgui.ini
app/CUsersognjeAppDataLocal/AMD/DxcCache/: 8de497660391ccde.fd65cebfd045df59.7170d1f5.6b8ae907.0.parc  8de497660391ccde.fd65cebfd045df59.7963d102.bb2d92cd.0.parc  8de497660391ccde.fd65cebfd045df59.f5cd4141.87672893.0.parc
app/assets/models/campfire/: Campfire Readme.txt
app/assets/models/stone/: Stone.x3d
app/include/: AppUtils.hpp  BedroomSimulation.hpp  BloomController.hpp  DirectionalLight.hpp  Drawable.hpp  GUIController.hpp  GraveyardSimulation.hpp  GuiController.cpp  GuiController.hpp  InstancedModelDrawable.hpp  LampEvent.cpp  LampEvent.hpp  LightController.hpp  LightSwarm.hpp  Lights.hpp  Main.h  MainController.cpp  MainController.h  MainController.hpp  MainEventController.hpp  MainLightController.hpp  ModelDrawable.hpp  MyApp.h  MyApp.hpp  MyController.h  MyController.hpp  MyGUIController.hpp  MyModel.hpp  MySceneController.hpp  PointLight.hpp  PostProcessingController.hpp  ProgramState.hpp  Scene.hpp  Target.hpp  Timer.hpp  Utils.hpp  myApp.hpp
app/include/app/: GUIController.hpp  Main.hpp  MainController.hpp  MyApp.hpp
app/resources/models/Gary/: license.txt
app/resources/models/HafezTomb/: HafezTomb_OBj.mtl
app/resources/models/MOLIMTE/: Rotunda1_01.mtl
app/resources/models/SBBus/: license.txt  scene.gltf
app/resources/models/SBHouse/: SBHouse.mtl
app/resources/models/StreetLamp/: street_lamp_Description.txt  street_lamp_maya2016.mb  street_lamp_obj.mtl
app/resources/models/ak_47/: ak47.mtl  link.txt
app/resources/shaders/: BasicShader.glsl  FarShader.glsl  NearShader.glsl  aa_post.glsl  asteroid.glsl  basic.glsl  basic1.glsl  basic3.glsl  basic_instanced.glsl  basic_point_light.glsl  basic_rgba.glsl  bed.glsl  blackWhite.glsl  blending.glsl  bloom.glsl  bloom_aware_shader.glsl  bloom_blur.glsl  bloom_extract.glsl  bloom_final.glsl  blur.glsl  blur_shader_h.glsl  blur_shader_horizontal.glsl  blur_shader_v.glsl  bush_shader.glsl  cabin.glsl  campfire_shader.glsl  car.glsl  cloud.glsl  combine_shader.glsl  crosshair.glsl  daylight_shader.glsl  deepfried.glsl  default.glsl  deferred_bloom_aware_render.glsl  deferred_geometry.glsl  deferred_render.glsl  depth.glsl  eyeShader.glsl  fbo_shader.glsl  fire_shader.glsl  (+61 more)
app/src/: AppUtils.cpp  BedroomSimulation.cpp  BloomController.cpp  Drawable.cpp  GUIController.cpp  GraveyardSimulation.cpp  GuiController.cpp  InstancedModelDrawable.cpp  LightController.cpp  LightSwarm.cpp  Main.cpp  MainController.cpp  MainEventController.cpp  MainLightController.cpp  ModelDrawable.cpp  MyApp.cpp  MyController.cpp  MyGUIController.cpp  MyModel.cpp  MySceneController.cpp  PointLight.cpp  PostProcessingController.cpp  Scene.cpp  Target.cpp  myApp.cpp
docs/: index.html  (+22 more)
engine/libs/assimp/: CMakeLists.txt
(+525 files in other folders)
