cmake_minimum_required(VERSION 3.15)

set(ASSIMP_VERSION_MAJOR 6)
set(ASSIMP_VERSION_MINOR 0)
set(ASSIMP_VERSION_PATCH 2)
set(ASSIMP_VERSION ${ASSIMP_VERSION_MAJOR}.${ASSIMP_VERSION_MINOR}.${ASSIMP_VERSION_PATCH})

set(ASSIMP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(ASSIMP_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)

add_library(assimp SHARED IMPORTED GLOBAL)
set_target_properties(assimp PROPERTIES
    IMPORTED_LOCATION ${ASSIMP_LIB_DIR}/libassimp.so.${ASSIMP_VERSION}
    IMPORTED_SONAME libassimp.so.${ASSIMP_VERSION_MAJOR}
    INTERFACE_INCLUDE_DIRECTORIES ${ASSIMP_INCLUDE_DIR}
)

add_library(assimp::assimp ALIAS assimp)

